# uhaed_project

./: README.md
detection/: package.xml  setup.py
detection/detection/: check.py  class_names.json  est_handpose.py  predict.py
pepper_description/: CMakeLists.txt  package.xml
pepper_description/urdf/: pepper.urdf
sim_environment/: CMakeLists.txt  package.xml
sim_environment/launch/: classroom.launch.py  classroom_with_screen.launch.py
sim_environment/models/blackboard/: model.config  model.sdf
sim_environment/models/classroom_chair/: model.config  model.sdf
sim_environment/models/classroom_desk/: model.config  model.sdf
sim_environment/models/tablet_screen/: model.config  model.sdf
sim_environment/scripts/: spawn_pepper.py  spawn_tablet_screen.py  tablet_screen_publisher.py
sim_environment/worlds/: classroom.sdf  classroom.world
