<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pepper_description</name>
  <version>0.0.1</version>
  <description>Pepper URDF/XACRO for Gazebo</description>
  <maintainer email="lifteddebbymartha@gmail.com">Debby</maintainer>
  <license>BSD-3-Clause</license>
  
  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Needed to process XACRO files -->
  <exec_depend>xacro</exec_depend>

  <!-- For robot model files -->
  <exec_depend>urdf</exec_depend>

  <!-- ROS 2 Gazebo integration -->
  <exec_depend>ros-humble-ros-gz</exec_depend>
  <exec_depend>ros-humble-ros-gz-sim</exec_depend>
  <exec_depend>ros-humble-ros-gz-interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

